--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wangnene2/chart",
+  "name": "terminal-charter",
   "version": "1.0.18",
   "description": "Bring charts to terminal.",
   "keywords": [
